this will fix the spacing on the index page

--- a/css/styles-contact.css
+++ b/css/styles-contact.css
@@ -58,7 +58,7 @@ body {
 }
 
 .navbar {
-  width: 100%;
+  width: 110%;
   display: inline-block;
   font-family: 'Barlow', sans-serif;
   font-size: 16px;
@@ -131,6 +131,7 @@ body {
 .search-top {
   float: right;
   padding-right: 56px;
+  margin-right: 48px;
 }
 
 .btn:hover {
@@ -440,7 +441,7 @@ body {
   font-size: 16px;
   float: left;
   display: block;
-  margin-top: 36px;
+  margin-top: 12px;
 }
 
 .footer-links a {
@@ -451,6 +452,14 @@ body {
 .footer-links a:hover {
   text-decoration: none;
   color: #77bfd2;
+}
+
+#footer-links-left {
+  margin-left: 48px;
+}
+
+#footer-links-right {
+  margin-left: -24px;
 }
 
 #footer-image {
@@ -482,13 +491,13 @@ body {
 }
 
 .footer-info a {
-  color: black;
+  color: #77bfd2;
   text-decoration: none;
 }
 
 .footer-info a:hover {
   text-decoration: none;
-  color: #77bfd2;
+  color: #aa5147;
 }
 
 .bottom-follow {
@@ -498,6 +507,7 @@ body {
 }
 
 .bottom-follow h3 {
+  color: #aa5147;
   text-align: center;
   font-family: 'Passion One', cursive;
   font-size: 32px;
@@ -515,7 +525,7 @@ body {
 }
 
 #icons-bottom-shift {
-  margin-left: 136px;
+  margin-left: 156px;
 }
 
 @media(max-width: 768px) {
