--- a/css/styles-index.css
+++ b/css/styles-index.css
@@ -8,6 +8,14 @@ p {
   font-family: 'Barlow', sans-serif;
 }
 
+#whole-body {
+  width: 90%;
+  margin-left: 48px;
+}
+#header-both {
+  display: block;
+}
+
 #header-content {
   background-image: url(https://66.media.tumblr.com/6b5b9db79853359a5210767324d38339/tumblr_phy9yi82x21s72wwgo1_1280.jpg);
   background-size: 100%;
@@ -56,7 +64,7 @@ nav a:hover {
 }
 
 .navbar {
-  width: 100%;
+  width: 110%;
   display: inline-block;
   font-family: 'Barlow', sans-serif;
   font-size: 16px;
@@ -130,6 +138,7 @@ ul li i {
   display: block;
   float: right;
   padding-right: 56px;
+  margin-right: 48px;
 }
 
 .btn:hover {
@@ -169,13 +178,9 @@ ul li i {
   float: right;
   width: 40%;
   border-radius: 6px;
-  margin-left: 24px;
+  margin-left: 48px;
   margin-top: 18px;
-  margin-bottom: 12px;
-}
-
-.opening-slide-up {
-  display: none;
+  margin-bottom: 18px;
 }
 
 .page-content {
@@ -186,7 +191,7 @@ ul li i {
 
 #content-header {
   font-size: 104px;
-  margin-left: 148px;
+  margin-left: 48px;
   margin-top: 48px;
   text-align: left;
   font-family: 'Passion One', cursive;
@@ -402,7 +407,7 @@ ul li i {
   font-size: 16px;
   float: left;
   display: block;
-  margin-top: 36px;
+  margin-top: 12px;
 }
 
 .footer-links a {
@@ -413,6 +418,14 @@ ul li i {
 .footer-links a:hover {
   text-decoration: none;
   color: #77bfd2;
+}
+
+#footer-links-left {
+  margin-left: 48px;
+}
+
+#footer-links-right {
+  margin-left: -24px;
 }
 
 #footer-image {
@@ -444,13 +457,13 @@ ul li i {
 }
 
 .footer-info a {
-  color: #aa5147;
+  color: #77bfd2;
   text-decoration: none;
 }
 
 .footer-info a:hover {
   text-decoration: none;
-  color: #77bfd2;
+  color: #aa5147;
 }
 
 .bottom-follow {
@@ -460,7 +473,9 @@ ul li i {
 }
 
 .bottom-follow h3 {
+  color: #aa5147;
   text-align: center;
+  margin-top: 36px;
   font-family: 'Passion One', cursive;
   font-size: 32px;
 }
@@ -477,7 +492,7 @@ ul li i {
 }
 
 #icons-bottom-shift {
-  margin-left: 136px;
+  margin-left: 156px;
 }
 
 #countup {
@@ -501,22 +516,17 @@ ul li i {
   font-size: 18px;
 }
 
-@media(max-width: 768px) {
-  nav div {
-    display: block;
+@media screen and (max-width: 768px) {
+  #content-header {
+    margin-left: 0px;
+    float: left;
+    margin-right: 48px;
   }
 
-  ul {
-    display: none;
-    position: static;
-    background: #e3e3e3;
+
+
+  #hiring-object {
+    margin-left: 48px;
   }
 
-  ul li {
-    display: block;
-  }
-  ul ul {
-    position: static;
-    background: #e3e3e3;
-  }
 };
