--- a/css/styles-products.css
+++ b/css/styles-products.css
@@ -52,7 +52,7 @@ body {
 }
 
 .navbar {
-  width: 100%;
+  width: 110%;
   display: inline-block;
   font-family: 'Barlow', sans-serif;
   font-size: 16px;
@@ -125,6 +125,7 @@ body {
 .search-top {
   float: right;
   padding-right: 56px;
+  margin-right: 48px;
 }
 
 .btn:hover {
